--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            multiDexEnabled true
+
         }
     }
 }
@@ -31,6 +32,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
+    implementation 'com.android.support:multidex:1.0.3'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
